--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'IBM Plex Sans Thai', sans-serif !important;
+    text-decoration: 'none' !important;
 }
 
 :root {
@@ -32,10 +33,14 @@ body {
         rgb(var(--background-start-rgb));
 }
 
+nextjs-portal {
+    display: none;
+}
+
 .res-bg {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to left, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 90%), url('../public/background1.png');
+    background: linear-gradient(to left top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0) 90%), url("../public/background1.png");
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -70,6 +75,82 @@ a.cover-button:hover {
     transition: ease 0.2s;
 }
 
+.navbar {
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(8px)
+}
+
+.grid {
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 10px;
+}
+
+.grid-img-con {
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.grid-img-con-2l {
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 5px;
+}
+
+.grid-text {
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.anc-text-extra {
+    height: 100%;
+}
+
+.footer {
+    background-color: rgba(255, 255, 255, 0.5)
+}
+
+.footer-title {
+    font-size: 2rem;
+}
+
+.float-end {
+    margin-left: 10px;
+}
+
+.grid-img-con img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.grid-img-con-2l img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.page-cov {
+    height: 50vh !important;
+}
+
+.nav-link {
+    height: 50px
+}
+
+.grid-big {
+    width: 100% !important;
+}
+
+.grid-img-con-big {
+    width: 400px !important;
+    height: 100% !important;
+}
+
+.grid-img-con-big img {
+
+}
+
 @media (max-width: 437px) and (min-width: 0px) {
     text.nav-title {
         font-size: 1.2rem;
@@ -90,7 +171,23 @@ a.cover-button:hover {
         display: none;
     }
     a.cover-button {
-        font-size: .6rem;
+        font-size: 1rem;
+    }
+    .grid {
+        width: 200px;
+        height: 200px;
+    }
+    .grid-img-con {
+        height: 140px;
+    }
+    .grid-img-con-2l {
+        height: 140px;
+    }
+    .grid-text {
+        height: 140px;
+    }
+    .anc-text {
+        font-size: .7rem;
     }
 }
 
@@ -117,6 +214,22 @@ a.cover-button:hover {
     a.cover-button {
         font-size: .8rem;
     }
+    .grid {
+        width: 250px;
+        height: 250px;
+    }
+    .grid-img-con {
+        height: 190px;
+    }
+    .grid-img-con-2l {
+        height: 190px;
+    }
+    .grid-text {
+        height: 190px;
+    }
+    .anc-text {
+        font-size: .8rem;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 480px) {
@@ -140,7 +253,23 @@ a.cover-button:hover {
         font-size: .8rem;
     }
     a.cover-button {
-        font-size: .8rem;
+        font-size: 1rem;
+    }
+    .grid {
+        width: 280px;
+        height: 280px;
+    }
+    .grid-img-con {
+        height: 220px;
+    }
+    .grid-img-con-2l {
+        height: 220px;
+    }
+    .grid-text {
+        height: 220px;
+    }
+    .anc-text {
+        font-size: .9rem;
     }
 }
 
@@ -166,5 +295,40 @@ a.cover-button:hover {
     }
     a.cover-button {
         font-size: 1.2rem;
+    }
+    .grid {
+        width: 300px;
+        height: 300px;
+    }
+    .grid-img-con {
+        height: 240px;
+    }
+    .grid-img-con-2l {
+        height: 240px;
+    }
+    .grid-text {
+        height: 240px;
+    }
+    .anc-text {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 1201px) {
+    .grid {
+        width: 300px;
+        height: 300px;
+    }
+    .grid-img-con {
+        height: 240px;
+    }
+    .grid-img-con-2l {
+        height: 240px;
+    }
+    .grid-text {
+        height: 240px;
+    }
+    .anc-text {
+        font-size: 1rem;
     }
 }
