--- a/app/globals.css
+++ b/app/globals.css
@@ -7,30 +7,63 @@
 body {
     font-family: 'IBM Plex Sans Thai', sans-serif !important;
     text-decoration: 'none' !important;
+    color: white !important;
+    display: flex;
+    flex-direction: column;
+}
+
+body, html {
+    min-height: 100vh !important;
 }
 
 :root {
-    --foreground-rgb: 0, 0, 0;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
+    --primaryn: 128, 207, 255;
+    --on-primaryn: 0, 52, 76;
+    --primary-containern: 0, 76, 109;
+    --on-primary-containern: 197, 231, 255;
+    --inverse-primaryn: 0, 101, 142;
+    --secondaryn: 255, 175, 213;
+    --on-secondaryn: 98, 0, 62;
+    --secondary-containern: 139, 0, 90;
+    --on-secondary-containern: 255, 216, 232;
+    --tertiaryn: 228, 197, 33;
+    --on-tertiaryn: 58, 48, 0;
+    --tertiary-containern: 84, 70, 0;
+    --on-tertiary-containern: 255, 226, 76;
+    --errorn: 255, 180, 169;
+    --on-errorn: 104, 0, 3;
+    --error-containern: 147, 0, 6;
+    --on-error-containern: 255, 218, 212;
+    --surfacen: 25, 28, 30;
+    --on-surfacen: 225, 226, 229;
+    --surface-variantn: 65, 72, 77;
+    --on-surface-variantn: 193, 199, 206;
+    --inverse-on-surfacen: 25, 28, 30;
+    --inverse-surfacen: 225, 226, 229;
+    --surface-1n: 30, 37, 41;
+    --surface-2n: 33, 42, 48;
+    --surface-3n: 36, 48, 55;
+    --surface-4n: 37, 49, 57;
+    --surface-5n: 39, 53, 61;
+    --backgroundn: 25, 28, 30;
+    --on-backgroundn: 225, 226, 229;
+    --outlinen: 139, 145, 151;
+    --outline-variantn: 65, 72, 77;
+    --shadow-1n: 0 1px 3px 1px #00000026, 0 1px 2px #0000004d;
+    --shadow-2n: 0 2px 6px 2px #00000026, 0 1px 2px #0000004d;
+    --shadow-3n: 0 4px 8px 3px #00000026, 0 1px 3px #0000004d;
+    --shadow-4n: 0 6px 10px 4px #00000026, 0 2px 3px #0000004d;
+    --shadow-5n: 0 8px 12px 6px #00000026, 0 4px 4px #0000004d;
+    --drop-shadow-1n: dropShadow(0 1px 3px #00000026), dropShadow(0 1px 2px #0000004d);
+    --drop-shadow-2n: dropShadow(0 2px 6px #00000026), dropShadow(0 1px 2px #0000004d);
+    --drop-shadow-3n: dropShadow(0 4px 8px #00000026), dropShadow(0 1px 3px #0000004d);
+    --drop-shadow-4n: dropShadow(0 6px 10px #00000026), dropShadow(0 2px 3px #0000004d);
+    --drop-shadow-5n: dropShadow(0 8px 12px #00000026), dropShadow(0 4px 4px #0000004d);
 }
 
 body {
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    color: rgb(var(--surfacen));
+    background: rgb(var(--surfacen));
 }
 
 nextjs-portal {
@@ -40,22 +73,25 @@ nextjs-portal {
 .res-bg {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to left top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0) 90%), url("../public/background1.png");
-    background-size: cover;
+    background: linear-gradient(to left top, rgba(var(--surfacen), 1) 0%, rgba(var(--surfacen), 0.7) 50%, rgba(var(--surfacen), 0) 100%), url("../public/background1.png") !important;
+    background-size: cover !important;
     background-position: center;
     z-index: -1;
 }
 
 a.cover-welcome {
     font-size: 3rem;
+    color: white;
 }
 
 a.cover-title {
     font-size: 5rem;
+    color: white;
 }
 
 a.cover-subtitle {
     font-size: 1.5rem;
+    color: white;
 }
 
 a.cover-button {
@@ -64,14 +100,15 @@ a.cover-button {
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 50px;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(var(--surface-1n), 0.7);
     transition: ease 0.2s;
+    color: white;
 }
 
 a.cover-button:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(var(--surface-4n), 0.7);
     border-color: white;
-    border-width: 3px;
+    border-width: 1px;
     transition: ease 0.2s;
 }
 
@@ -81,16 +118,21 @@ a.cover-button:hover {
 }
 
 .grid {
-    border-radius: 10px;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    padding-bottom: 10px;
+    border-color: rgb(var(--outline-variantn));
+    border-width: 2px;
     margin: 10px;
+    background-color: rgb(var(--surface-4n));
 }
 
 .grid-img-con {
-    border-radius: 10px;
-    background-color: white;
-    margin-bottom: 10px;
+    border-radius: 20px 20px 0px 0px;
+    background-color: rgb(var(--surface-1n));
+    border-color: rgb(var(--outline-variantn));
+    border-width: 0px 0px 2px 0px;
+    margin-bottom: 15px;
+    padding: 5px;
 }
 
 .grid-img-con-2l {
@@ -100,8 +142,11 @@ a.cover-button:hover {
 }
 
 .grid-text {
-    border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.anc-title {
+    font-size: 1.5rem;
 }
 
 .anc-text-extra {
@@ -131,7 +176,7 @@ a.cover-button:hover {
 }
 
 .page-cov {
-    height: 50vh !important;
+    height: 30vh !important;
 }
 
 .nav-link {
@@ -140,15 +185,12 @@ a.cover-button:hover {
 
 .grid-big {
     width: 100% !important;
+    height: fit-content !important;
 }
 
 .grid-img-con-big {
     width: 400px !important;
     height: 100% !important;
-}
-
-.grid-img-con-big img {
-
 }
 
 @media (max-width: 437px) and (min-width: 0px) {
