Fix Samsung Internet compability(test 1) :

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,11 +20,6 @@
 
 body {
     font-family: 'IBM Plex Sans Thai', sans-serif !important;
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    color: white;
+    background: black;
 }
